welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: identifier expected but 'false' found.
  var droite: Boolean==false
                       ^SnakeBuggle:3: error: identifier expected but 'false' found.
  var gauche: Boolean==false
                       ^