welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  var droite: Boolean==false
  var gauche: Boolean==false
  
  for (k <-0 to 5){
    for (i<-0 to 5){
      baisseBrosse()
      avance()
    
    }
  	if (getDirection ()== Direction.OUEST){
      gauche()
      avance()
      gauche()
    }
    else {
      droite()
      avance()
      droite()
    }
  }
}